src/main/java/application/testData/invalidRandomAddresses/hard/completedCorrectly/todo/RandomAddressesWithTwoWrongRandomFieldsWithoutRelationship.java
package application.testData.invalidRandomAddresses.hard.completedCorrectly.todo;

public class RandomAddressesWithTwoWrongRandomFieldsWithoutRelationship {
    // primele 2 adrese sunt pt a da valori fieldurilor extrase ca fiind gresite. cele 2 fielduri alese, n au legatura.
    // un field e din prima adresa, cel de al doilea din a doua adresa

}
